envoy.yaml
admin: # will soon be deprecated
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9000

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                stream_idle_timeout: 480s
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: portal
                      domains: ["*"]
                      routes: #matchしたものからルーティングされるため、/api/を先に書く必要がある。
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: apiserver_backend
                        - match:
                            prefix: "/"
                          route:
                            cluster: next_backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                upgrade_configs:
                  - upgrade_type: websocket
  clusters:
    - name: next_backend
      type: STRICT_DNS
      connect_timeout: 240s
      load_assignment:
        cluster_name: next_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: frontend
                      port_value: 3000
    - name: apiserver_backend
      type: STRICT_DNS
      connect_timeout: 240s
      load_assignment:
        cluster_name: apiserver_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 80
